# loam

./: .coverage  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: DESIGN.md
loam/: __init__.py  agent.py  arena.py  bestiary.py  bonds.py  cast.py  character.py  cli.py  cognition.py  combat.py  config.py  converse.py  crafts.py  dashboard.py  genesis.py  genome.py  language.py  llm.py  memory.py  metrics.py  model.py  persistence.py  player.py  quests.py  rifts.py  wants.py  world.py  zones.py
loam/game/: __init__.py  combat.py  explore.py  layout.py  theme.py
tests/: conftest.py  test_aid.py  test_arena.py  test_bestiary.py  test_bonds.py  test_cast.py  test_character.py  test_cli.py  test_cli_extra.py  test_cognition.py  test_combat.py  test_converse.py  test_crafts.py  test_dashboard.py  test_explore_smoke.py  test_fight.py  test_forge.py  test_genesis.py  test_genome.py  test_introduce.py  test_language.py  test_layout.py  test_metrics.py  test_quests.py  test_rifts.py  test_saveasbase.py  test_skills.py  test_tongue.py  test_trade.py  test_vocations.py  test_weaver.py  test_world.py  test_you.py  test_zones.py
worlds/: hollow.base.json
