[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loam"
version = "0.1.0"
description = "A living world of AI agents you tend and inhabit — not a god, the one who understands."
requires-python = ">=3.10"
dependencies = []              # runs with zero deps (rule cognition); see LICENSE (proprietary)

[project.optional-dependencies]
real = ["anthropic>=0.69,<1"]  # only needed for --real (live Claude cognition)
dev = ["pytest>=8", "pytest-cov>=5", "anthropic>=0.69,<1"]

[project.scripts]
loam = "loam.cli:main"

[tool.setuptools.packages.find]
include = ["loam*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["loam"]
# llm.py is the live-network boundary — exercised by --real runs, not unit tests.
omit = ["loam/llm.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "\\.\\.\\."]
