[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loam"
version = "0.1.0"
description = "A living world of AI agents you tend and inhabit — not a god, the one who understands."
requires-python = ">=3.10"
dependencies = []              # runs with zero deps (rule cognition); see LICENSE (proprietary)

[project.optional-dependencies]
real = ["anthropic>=0.69,<1"]  # only needed for --real (live Claude cognition)
game = ["pygame-ce>=2.4"]      # only needed for the explore client (loam explore)
dev = ["pytest>=8", "pytest-cov>=5", "anthropic>=0.69,<1"]

[project.scripts]
loam = "loam.cli:main"

[tool.setuptools.packages.find]
include = ["loam*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["loam"]
# boundaries exercised by real runs / a live window, not unit tests:
# llm.py = the network; game/ = the pygame render loop + theme (smoke-tested only).
omit = ["loam/llm.py", "loam/game/explore.py", "loam/game/theme.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "\\.\\.\\."]
